--- a/webapp/src/components/ButtonIcon/ButtonIcon.module.scss
+++ b/webapp/src/components/ButtonIcon/ButtonIcon.module.scss
@@ -26,23 +26,33 @@
     background-color: map-get($theme-colors, primary);
     border-color: map-get($theme-colors, primary);
     color: $color-white;
-
-    &:hover {
-      background-color: transparent;
-      color: map-get($theme-colors, primary);
-      border-color: map-get($theme-colors, primary);
-    }
   }
 
   &.secondary {
-    border-color: transparent;
-    background-color: transparent;
-    color: $color-navy-blue;
+    background-color: map-get($theme-colors, secondary);
+    border-color: map-get($theme-colors, secondary);
+    color: $color-white;
+  }
 
-    &:hover {
-      background-color: transparent;
-      color: $color-navy-blue;
-      border-color: $color-navy-blue;
+  &.tertiary {
+    border-color: $color-white;
+    background-color: $color-white;
+    color: map-get($theme-colors, primary);
+  }
+
+  &.transparent {
+    background-color: transparent;
+
+    &.primary {
+      color: map-get($theme-colors, primary);
+    }
+  
+    &.secondary {
+      color: map-get($theme-colors, secondary);
+    }
+  
+    &.tertiary {
+      color: $color-white;
     }
   }
 }
