feat: add .env.defaults and migrate to vite webapp

--- a/webapp/src/styles/_init.scss
+++ b/webapp/src/styles/_init.scss
@@ -2,7 +2,7 @@
 // This partial can be imported by any component's .scss file in order to gain access to variables and mixins without introducing any duplicate styles.
 
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "~bootstrap/scss/functions";
+@import "bootstrap/scss/functions";
 
 // 2. Override Bootstrap variables as needed here.
 // To see what variables are available to override, go to node_modules/bootstrap/scss/_variables.scss
@@ -15,14 +15,14 @@
 @import "vars/fonts";
 
 // 3. Import the required bootstrap configuration.
-@import "~bootstrap/scss/variables";
-@import "~bootstrap/scss/maps";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/utilities";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/maps";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/utilities";
 
 // 4. Include any additional bootstrap components here.
-@import "~react-loading-skeleton/dist/skeleton";
-@import '~react-lazy-load-image-component/src/effects/blur';
+@import "react-loading-skeleton/dist/skeleton";
+@import "react-lazy-load-image-component/src/effects/blur";
 
 // Uncomment to show outer edges of rows.
 // .row {
