--- a/webapp/src/styles/_typography.scss
+++ b/webapp/src/styles/_typography.scss
@@ -3,40 +3,40 @@
 
 @font-face {
   font-family: "JosefinSans";
-  src: url("../../public/fonts/JosefinSans/JosefinSans-Regular.woff2") format("woff2"),
-    url("../../public/fonts/JosefinSans/JosefinSans-Regular.woff") format("woff");
+  src: url("/fonts/JosefinSans/JosefinSans-Regular.woff2") format("woff2"),
+    url("/fonts/JosefinSans/JosefinSans-Regular.woff") format("woff");
   font-weight: normal;
   font-display: fallback;
 }
 
 @font-face {
   font-family: "JosefinSans";
-  src: url("../../public/fonts/JosefinSans/JosefinSans-Medium.woff2") format("woff2"),
-    url("../../public/fonts/JosefinSans/JosefinSans-Medium.woff") format("woff");
+  src: url("/fonts/JosefinSans/JosefinSans-Medium.woff2") format("woff2"),
+    url("/fonts/JosefinSans/JosefinSans-Medium.woff") format("woff");
   font-weight: medium;
   font-display: fallback;
 }
 
 @font-face {
   font-family: "JosefinSans";
-  src: url("../../public/fonts/JosefinSans/JosefinSans-SemiBold.woff2") format("woff2"),
-    url("../../public/fonts/JosefinSans/JosefinSans-SemiBold.woff") format("woff");
+  src: url("/fonts/JosefinSans/JosefinSans-SemiBold.woff2") format("woff2"),
+    url("/fonts/JosefinSans/JosefinSans-SemiBold.woff") format("woff");
   font-weight: 600;
   font-display: fallback;
 }
 
 @font-face {
   font-family: "JosefinSans";
-  src: url("../../public/fonts/JosefinSans/JosefinSans-Bold.woff2") format("woff2"),
-    url("../../public/fonts/JosefinSans/JosefinSans-Bold.woff") format("woff");
+  src: url("/fonts/JosefinSans/JosefinSans-Bold.woff2") format("woff2"),
+    url("/fonts/JosefinSans/JosefinSans-Bold.woff") format("woff");
   font-weight: bold;
   font-display: fallback;
 }
 
 @font-face {
   font-family: "Lato";
-  src: url("../../public/fonts/Lato/Lato-Regular.woff2") format("woff2"),
-    url("../../public/fonts/Lato/Lato-Regular.woff") format("woff");
+  src: url("/fonts/Lato/Lato-Regular.woff2") format("woff2"),
+    url("/fonts/Lato/Lato-Regular.woff") format("woff");
   font-weight: normal;
   font-display: fallback;
 }
