fix: uncommited changes (2024/02/24)

--- a/webapp/src/components/Counter/Counter.module.scss
+++ b/webapp/src/components/Counter/Counter.module.scss
@@ -4,6 +4,9 @@
   display: flex;
   align-items: center;
   height: 40px;
+  box-sizing: border-box;
+  width: 150px;
+  overflow: hidden;
 
   input {
     width: 50px;
