--- a/webapp/src/components/ButtonIcon/ButtonIcon.module.scss
+++ b/webapp/src/components/ButtonIcon/ButtonIcon.module.scss
@@ -19,7 +19,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 20px;
+    // width: 20px;
   }
 
   &.primary {
@@ -41,7 +41,9 @@
   }
 
   &.transparent {
+    border-color: transparent;
     background-color: transparent;
+    box-shadow: none;
 
     &.primary {
       color: map-get($theme-colors, primary);
